HelloUltraviolet/Fixtures/RejectedSource/Keys/SpeculativeMemoryOrder/Source/Main.uv
//! Rejected key-system specimen for memory-order annotation inside speculative execution.

public procedure speculativeMemoryOrderReference() -> i32 {
    var shared_value: shared i32 = 1
    %speculative write shared_value {
        let observed: i32 = #acquire shared_value
        shared_value = observed
    }
    return 0
}
